# essepoitenepenti

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  check_db.py  check_settings.py  docker-compose.yml  enrich_with_yf.py  legacy-cleanup-backup.json  package-lock.json  pyproject.toml  test_health_api.py  test_settings_api.py  trade_proposer.db
alembic/: env.py
assets/: aurelio_logo_lottie.json  aurelio_react_theme.jsx
docs/: account-risk-state-spec.md  alpaca-paper-order-execution-spec.md  architecture-simplification-refactor-plan.md  architecture.md  bars-refresh-spec.md  broker-position-lifecycle-spec.md  broker-risk-management-spec.md  decision-autotuning-plan.md  decision-sample-tuning-guide.md  default-watchlists.md  docs-index.md  effective-plan-outcome-spec.md  er-model.md  features-and-capabilities.md  getting-started.md  glossary.md  historical-replay-backtesting-plan.md  historical-replay-implementation-checklist.md  news-provider-eligibility-spec.md  news-provider-reliability-spec.md  nitter-social-implementation-checklist.md  nitter-social-relevance-scoring.md  nitter-social-sentiment-design.md  ontology-enrichment-plan.md  operational-scripts-reference.md  operator-page-field-guide.md  phase-2-app-native.md  plan-generation-tuning-implementation-plan.md  plan-generation-tuning-spec.md  plan-policy-evaluator-spec.md  plan-reliability-report-spec.md  product-thesis.md  raw-details-reference.md  recommendation-methodology.md  recommendation-plan-evaluation-recompute-notes.md  recommendation-plan-resolution-spec.md  roadmap.md  (+9 more)
(+371 files in other folders)
