[project]
name = "trade-proposer-app"
version = "0.1.0"
description = "Deployable product version of the trade proposer application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.43,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "alembic>=1.16.0,<2.0.0",
  "cryptography>=45.0.0,<46.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pandas>=3.0.0,<4.0.0",
  "yfinance>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
prototype = [
  "openai>=1.100.0,<2.0.0",
]
dev = [
  "ruff>=0.12.0,<1.0.0",
  "mypy>=1.17.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[project.scripts]
trade-proposer-app-migrate = "trade_proposer_app.migrations:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
